2010-09-04  Per Bothner  <per@bothner.com>

	* Compilation.java (inlineOk): In interactive mode don't inline
	non-self calls to top-level functions.
	* LambdaExp.java (visit): Set and restore Compilation's curLambda.
	* ProcInitializer.java (emitLoadModuleMethod): Allow rebinding
	only if there is a Declaration.  (Probably redundant change.)
	* ScopeExp.java (topLevel): New method.

2010-09-02  Per Bothner  <per@bothner.com>

	In interactive mode allow re-binding existing procedures.
	* ProcInitializer.java (emitLoadModuleMethod): If interactive, check
	if there is an existing ModuleMethod binding, and if so re-use it.
	* ModuleMethod.java (init): New method.

2010-09-01  Per Bothner  <per@bothner.com>

	* LambdaExp.java (allocParameters): Remove some obsolate code - we
	no longer use an argsArray solely because we have have > 4 parameters
	in the function method, only apply methods.

2010-08-31  Per Bothner  <per@bothner.com>

	* Compilation.java (fewerClass): Remove unused flag.
	Update accordingly.
	* LambdaExp.java: Likewise.

2010-08-28  Per Bothner  <per@bothner.com>

	* Compilation.java (defaultClassFileVersion):  If JAVA7 is PreProcessed,
	select ClassType.JDK_1_7_VERSION.
	* InlineCalls.java (maybeInline): If use:java.dyn is PreProcess-enabled,
	use a MethodHandle instead of reflection.  Note is compile-time-only.

	Fix verification problem (backward jump between new and constructor).
	* ApplyExp.java (MAY_CONTAIN_BACK_JUMP): New flag.
	* FindCapturedVars.java: Set MAY_CONTAIN_BACK_JUMP if indicated.
	* PrimProcedure.java: Rewrite constructor if it MAY_CONTAIN_BACK_JUMP.

2010-08-27  Per Bothner  <per@bothner.com>

	* InlineCalls.java: Remove check for no-longer used CanInline.
	* CanInline.java: Remove interface.
	* Makefile.am: Update accordingly.

	* InlineCalls.java (maybeInline): Remove support for old inliner API
	found using Procedure.inlineCallsKey.
	(getInlinerMethodArgTypes): Simplify appropriately.

2010-08-26  Per Bothner  <per@bothner.com>
