@@ -1,3 +1,8 @@
+2010-09-15  Per Bothner  <per@bothner.com>
+
+	* ModuleExp.java (evalModule1, evalModule2): Use Environment's
+	setSaveCurrent/restoreCurrent methods.
+
 2010-09-04  Per Bothner  <per@bothner.com>
 
 	* Compilation.java (inlineOk): In interactive mode don't inline
